# LLMs-mathematics-research

./: .env.example  .gitignore  LICENSE  Notebook.ipynb  README.md  config.yaml  notebook.ipynb  notes  pyproject.toml  requirements.txt  run_batch_experiments.py  run_batch_experiments_grouped.py  run_experiment.py  scaffolded_researcher.py  survey.txt  test_api.py  test_code_execution.py  test_latex_and_code.py  test_openalex_integration.py  verified_results.json
batch_configs/: README.md  batch_config_example.json
data/: example_timeseries.csv
data/datasets/: README.md  blimp.txt  example_timeseries.txt  mnist.txt
docs/: MODAL_CODE_PATTERN.md  MODAL_SETUP.md  NANOGPT_MODELS.md  OPENALEX_API_RESEARCH.md  QUICK_START_MULTIPLICATION.md  README.md  TEST_RESULTS_CODE_CONTEXT.md
docs/architecture/: REFACTORING_SUMMARY.md  STAGE_INFORMATION_PLACEMENT.md  TEST_SUMMARY.md  THREE_STAGE_IMPLEMENTATION_COMPLETE.md  THREE_STAGE_LIVE_TEST_RESULTS.md
docs/providers/: GEMINI_UPDATE.md  IMPLEMENTATION_CHANGES.md  MULTI_PROVIDER_GUIDE.md  PROVIDER_DEFAULTS_GUIDE.md  README.md
outputs/: execution_log_20251001_214808.txt  execution_log_20251001_215107.txt
outputs/open_research_20251002_143529/: session_log.txt
outputs/open_research_20251002_143739/: paper.tex  research_notes.txt  session_log.txt
outputs/open_research_20251002_151348/: paper.tex  session_log.txt
outputs/open_research_20251002_172644/: code.py  metrics.json  paper.tex  session_log.txt
outputs/open_research_20251002_180900/: code.py  metrics.json  paper.tex  session_log.txt
outputs/open_research_20251002_181531/: code.py
outputs/open_research_20251002_181646/: code.py  metrics.json  paper.tex  session_log.txt
outputs/open_research_20251002_182628/: code.py  metrics.json  paper.tex  session_log.txt
outputs/open_research_20251002_184521/: code.py  metrics.json  paper.tex  session_log.txt
outputs/open_research_20251002_190029/: code.py  paper.tex  session_log.txt
outputs/open_research_20251002_191748/: code.py  metrics.json  paper.tex  session_log.txt
outputs/open_research_20251002_222101/: code.py  paper.tex  session_log.txt
outputs/open_research_20251004_151634/: code.py  metrics.json  paper.tex  session_log.txt
outputs/open_research_Paolo_20251004_162359/: code.py  metrics.json  paper.tex  session_log.txt
outputs/open_research_Paolo_20251004_191331/: code.py  critiques.txt  paper.tex  session_log.txt
outputs/open_research_Paolo_20251004_192438/: paper.tex
outputs/open_research_Paolo_20251004_200515/: code.py  critiques.txt  metrics.json  paper.tex  plans.txt  session_log.txt
outputs/power_method_20251001_223955/: paper.tex  session_log.txt
outputs/power_method_20251001_231951/: session_log.txt
outputs/power_method_20251001_233637/: session_log.txt
outputs/power_method_20251001_235214/: session_log.txt
outputs/power_method_20251001_235657/: paper.tex  session_log.txt
outputs/power_method_20251002_001300/: paper.tex  session_log.txt
outputs/power_method_20251002_003240/: paper.tex  session_log.txt
outputs/power_method_20251002_005025/: paper.tex  session_log.txt
outputs/power_method_20251002_011113/: session_log.txt
outputs/power_method_20251002_012756/: paper.tex  session_log.txt
outputs/power_method_20251002_013900/: paper.tex  session_log.txt
outputs/power_method_20251002_111302/: metrics.json  paper.tex  session_log.txt
outputs/power_method_20251002_142454/: session_log.txt
outputs/test_session/: paper.tex  session_log.txt
problems/: gpt2_multiplication.txt  ml_research.txt  open_mechanistic_interpretability.txt  open_research.txt  open_research_L2.txt  open_research_Paolo.txt  power_method.txt  test_data_analysis.txt  train_shakespeare_test.txt
problems/code/: README.md
problems/initial/: README.md  example_code.py  example_paper.tex
problems/papers/: Ashwin2025.txt  Booth2025.txt  Crossley2024.txt  Deveney2023.txt  Fernley2025.txt  Grig2023.txt  Hart2020.txt  Horton.txt  Inubushi2024.txt  Jing2025.txt  Ni2025.txt  Phillips2024.txt  Scott2024.txt  Smith2025.txt  Souttar2024.txt  Stokes2024.txt  Terasaki2024.txt  Turrini2024.txt  Waters2025.txt  Webber2025.txt  examplepaper2025.txt  placeholder.txt  yoshitaka2025.txt
prompts/: introduce_experiment.txt  iteration_feedback.txt  iteration_step.txt
scripts/: download_nanogpt_weights.py
src/llm_maths_research/: __init__.py  cli.py  config.py  provider_defaults.py
tests/: test_arxiv_download.py  test_arxiv_search.py  test_cached_modal.py  test_literature.py  test_modal_image_build.py  test_modal_setup.py  test_modal_timing.py  test_nanogpt_weights.py  test_openalex_integration.py  test_refactoring.py
tests/integration/: test_gemini_config.py  test_gpt5.py  test_provider_defaults.py  (+5 more)
(+29 files in other folders)
